# constatus

./: .gitignore  .gitmodules  .lgtm.yml  CMakeLists.txt  Makefile  README.md  README.rest  config.h.in  constatus.cfg  constatus.spec  motion-to-constatus.py  stylesheet.css
.github/workflows/: package-deb.yaml  package-debian-deb.yaml  package-ubuntu-deb.yaml
contrib/systemd-setup/: README.md  constatus.service
debian/: changelog  control  copyright
debian/upstream/: metadata
examples/: README.md  browser.cfg  crop.cfg  interfacing-to-obs-studio.cfg  lcdproc-overlay.cfg  lcdproc-overlay.py  libcamera.cfg  lowres-detection-highres-store.cfg  mjpeg-multiplexer.cfg  mosaic-stream.cfg  motion-to-avi-file.cfg  motion-web.cfg  multicast.cfg  network-trigger.cfg  overlay-on-motion.cfg  pipewire-source.cfg  pipewire-target.cfg  pipewire.cfg  pixelflood.cfg  timelapse.cfg  usb-gadget.cfg  video4linux.cfg
man/: constatus.1
src/: announce_upnp.cpp  announce_upnp.h  audio.cpp  audio.h  audio_alsa.cpp  audio_alsa.h  audio_ffmpeg.h  audio_trigger.cpp  audio_trigger.h  cfg.cpp  cfg.h  cleaner.cpp  cleaner.h  controls.cpp  controls.h  controls_software.cpp  controls_software.h  controls_v4l.cpp  controls_v4l.h  db.cpp  db.h  default-stylesheet.cpp  default-stylesheet.h  draw.cpp  draw.h  draw_text.cpp  draw_text.h  draw_text_bitmap.cpp  draw_text_bitmap.h  draw_text_font.cpp  draw_text_font.h  encoding.cpp  encoding.h  error.cpp  error.h  exec.cpp  exec.h  failure.h  feed.cpp  feed.h  (+204 more)
src/filter-plugins/: Makefile  README  cairo.cpp  cairo.h  demo.c  demo2.cpp  demoocv.cpp  demoocv2.cpp  keep-alive.cpp  mqtt.cpp  mqtt_text_scroll.cpp  mqtt_trigg_overlap.cpp  template.c
src/meta-plugins/: Makefile  gps.cpp
src/motiontrigger-plugins/: Makefile  README  demo.cpp  demoocv.cpp  demoocv2.cpp  gpio.cpp  hue-only.cpp  network.cpp  objects-test.cpp
src/source-plugins/: Makefile  README  demo.cpp  mqtt-images.cpp  vnc.cpp
src/streamwriter-plugins/: Makefile  demo.c
src/uvc-gadget/: README.md  uvc-gadget.c  uvc-gadget.h
